# itsdangerous

./: .azure-pipelines.yaml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGES  CHANGES.rst  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  Makefile  README  README.md  README.rst  itsdangerous.py  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: lock.yaml  publish.yaml  tests.yaml
docs/: Makefile  concepts.rst  conf.py  encoding.rst  exceptions.rst  index.rst  jws.rst  make.bat  requirements.txt  serializer.rst  signer.rst  timed.rst  url_safe.rst
docs/_themes/flask_small/: layout.html  theme.conf
docs/_themes/flask_small/static/: flasky.css_t
requirements/: build.txt  dev.in  dev.txt  docs.txt  tests.in  tests.txt  typing.in  typing.txt
src/itsdangerous/: __init__.py  _compat.py  _json.py  encoding.py  exc.py  jws.py  serializer.py  signer.py  timed.py  url_safe.py
tests/: test_itsdangerous.py  test_jws.py  test_timed.py  test_url_safe.py
tests/test_itsdangerous/: test_jws.py  test_serializer.py  test_signer.py  test_timed.py  test_url_safe.py
