[project]
name = "itsdangerous"
description = "Safely pass data to untrusted environments and back."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Pallets", email = "contact@palletsprojects.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
Donate = "https://palletsprojects.com/donate"
Documentation = "https://itsdangerous.palletsprojects.com/"
Changes = "https://itsdangerous.palletsprojects.com/changes/"
"Source Code" = "https://github.com/pallets/itsdangerous/"
"Issue Tracker" = "https://github.com/pallets/itsdangerous/issues/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "itsdangerous.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # change in Python 3.12 beta causes warning from inside pytest
    "ignore:ast:DeprecationWarning",
    # dateutil using datetime.utcfromtimestamp
    "ignore:datetime.utcfromtimestamp:DeprecationWarning:dateutil.tz.tz",
]

[tool.coverage.run]
branch = true
source = ["itsdangerous", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.7"
files = ["src/itsdangerous"]
show_error_codes = true
pretty = true
strict = true
local_partial_types = true
warn_unreachable = true
