[metadata]
license_file = LICENSE.rst

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    itsdangerous
    tests

[coverage:paths]
source =
    src/itsdangerous
    .tox/*/lib/python*/site-packages/itsdangerous
    .tox/*/site-packages/itsdangerous
